<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.cs.brandeis.marius.homecooked.EditProfile">

    <TextView
        android:id="@+id/buffer"
        android:layout_width="match_parent"
        android:layout_height="50px" />

    <TextView
        android:id="@+id/location_label"
        android:layout_width="110px"
        android:layout_height="80px"
        android:layout_below="@id/buffer"
        android:gravity="right"
        android:text="@string/profile_location" />

    <EditText
        android:id="@+id/location_field"
        android:layout_width="wrap_content"
        android:layout_height="80px"
        android:layout_toRightOf="@id/location_label"
        android:layout_below="@id/buffer"
        android:hint="@string/profile_location_hint"/>

    <TextView
        android:id="@+id/bio_label"
        android:layout_width="110px"
        android:layout_height="80px"
        android:layout_below="@id/location_label"
        android:gravity="left"
        android:text="@string/profile_bio"/>

    <EditText
        android:id="@+id/bio_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_field"
        android:layout_toRightOf="@id/bio_label"
        android:lines="1"
        android:gravity="top"
        android:hint="@string/profile_bio_hint"/>

    <TextView
        android:id="@+id/eat_label"
        android:layout_width="110px"
        android:layout_height="80px"
        android:layout_below="@id/bio_label"
        android:gravity="left"
        android:text="@string/profile_eat"/>

    <EditText
        android:id="@+id/eat_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:gravity="top"
        android:hint="@string/profile_eat_hint"
        android:layout_below="@+id/bio_field"
        android:layout_alignLeft="@+id/bio_field"
        android:layout_alignStart="@+id/bio_field" />

    <TextView
        android:id="@+id/cook_label"
        android:layout_width="110px"
        android:layout_height="80px"
        android:layout_below="@id/eat_label"
        android:gravity="left"
        android:text="@string/profile_cook"/>

    <EditText
        android:id="@+id/cook_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:gravity="top"
        android:hint="@string/profile_cook_hint"
        android:layout_below="@+id/eat_field"
        android:layout_toRightOf="@id/cook_label"/>

    <TextView
        android:id="@+id/picture_label"
        android:layout_width="110px"
        android:layout_height="80px"
        android:layout_below="@id/cook_label"
        android:text="@string/profile_picture"/>

    <Button
        android:id="@+id/select_picture"
        android:layout_width="wrap_content"
        android:layout_height="80px"
        android:layout_toRightOf="@id/picture_label"
        android:layout_below="@id/cook_field"
        android:text="@string/select_picture_button"/>

    <ImageView
        android:id="@+id/image_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="80px"
        android:layout_below="@id/picture_label"
        android:text="@string/finish_button_text" />

</RelativeLayout>
